# pyorbslam3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
include/: ORBSLAM3Wrapper.h
scripts/: orbslam_rgbd.py
settings/: replica.yaml
src/: ORBSLAM3Wrapper.cpp
